fix positioning of review section, fix + not rotating properly, change positioning of review section on smaller devices, make contact section items have same width

--- a/style.css
+++ b/style.css
@@ -241,6 +241,7 @@ div[class^="line"] {
     display: grid;
     gap: 0.25rem 1rem;
     padding: 1rem 0;
+    grid-column: 3/-1;
     grid-template-columns: min-content 1fr;
 }
 .person-info img {
@@ -250,6 +251,13 @@ div[class^="line"] {
 }
 .person-info h3 {
     font-size: 18px;
+}
+.person-info + h3 {
+    grid-column: 3/4;
+    grid-row: 2/3;
+}
+.review-section h1 {
+    padding-bottom: 3rem;
 }
 .person-info p {
     font-size: 16px;
@@ -265,6 +273,8 @@ div[class^="line"] {
     color: white;
     -webkit-text-stroke: 2px #6248ff;
     font-size: 56px;
+    grid-row: 1/3;
+    grid-column: 2/3;
 }
 .review-iterator {
     grid-column: 3/4;
@@ -292,6 +302,8 @@ div[class^="line"] {
     display: none;
 }
 .block-question div {
+    display: flex;
+    align-items: center;
     transition: transform 0.5s;
 }
 .open {
@@ -322,7 +334,7 @@ div[class^="line"] {
     list-style-type: none;
 }
 .contact-section div {
-    width: min(483px, 90%);
+    width: min(483px, 80%);
 }
 .contact-section ul {
     margin: 0;
@@ -447,8 +459,40 @@ footer h3 {
 }
 @media screen and (width<800px) {
     .review-section {
+        position: relative;
         justify-content: center;
         grid-template-columns: min-content 1fr min-content;
+    }
+    .review-section h1 {
+        grid-column: 1/-1;
+        grid-row: 1/2;
+    }
+    .circle-button-container {
+        position: absolute;
+    }
+    .circle-button-container > :first-child {
+        position: absolute;
+        top: 50%;
+    }
+    .circle-button-container > :nth-child(2) {
+        position: absolute;
+        top: 50%;
+        left: -100%;
+    }
+    .person-info {
+        grid-column: 1/-1;
+        grid-row: 2/3;
+        display: flex;
+        flex-direction: column;
+    }
+    .person-info + h3 {
+        grid-column: 1/-1;
+        grid-row: 3/4;
+    }
+    .review-iterator {
+        grid-row: 4/5;
+        justify-self: center;
+        grid-column: 1/-1;
     }
 }
 @media screen and (width<500px) {
@@ -485,6 +529,13 @@ footer h3 {
 @media screen and (width<1350px) {
     .contact-section {
         justify-content: center;
+    }
+    .contact-section > div,
+    .contact-section > form {
+        width: 90%;
+    }
+    .contact-section h1 {
+        text-align: center;
     }
 }
 @media screen and (width<320px) {
